<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_weight="48"
            android:background="@color/gray">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:layout_marginEnd="2dp">
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:layout_gravity="end"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/etIngreso"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textCursorDrawable="@null"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tvsigno"
                    android:text=""
                    android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:layout_marginEnd="2dp">
            <Button
                    android:text="@string/btnac"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnac"
                    android:layout_weight="3"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
            <Button
                    android:text="@string/btndel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btndel"
                    android:layout_weight="3"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
            <Button
                    android:text="@string/division"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btndivision"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
        android:layout_marginEnd="2dp">
            <Button
                    android:text="@string/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btn7"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
            <Button
                    android:text="@string/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btn8"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
            <Button
                    android:text="@string/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btn9"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
            <Button
                    android:text="@string/btnpor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnpor"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8">
            <Button
                    android:text="@string/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btn4"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
            <Button
                    android:text="@string/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btn5"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
            <Button
                    android:text="@string/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btn6"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
            <Button
                    android:text="@string/btnmenos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnmenos"
                    android:layout_weight="1"
                    android:background="@color/lightskyblue"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="16">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="12">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="6">
                    <Button
                            android:text="@string/btn1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/btn1"
                            android:layout_weight="1"
                            android:background="@color/lightskyblue"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:layout_marginTop="10dip"
                            android:layout_marginBottom="10dip"/>
                    <Button
                            android:text="@string/btn2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/btn2"
                            android:layout_weight="1"
                            android:background="@color/lightskyblue"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:layout_marginTop="10dip"
                            android:layout_marginBottom="10dip"/>
                    <Button
                            android:text="@string/btn3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/btn3"
                            android:layout_weight="1"
                            android:background="@color/lightskyblue"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:layout_marginTop="10dip"
                            android:layout_marginBottom="10dip"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="6">
                    <Button
                            android:text="@string/btn0"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/btn0"
                            android:layout_weight="1"
                            android:background="@color/lightskyblue"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:layout_marginTop="10dip"
                            android:layout_marginBottom="10dip"/>
                    <Button
                            android:text="@string/btnpunto"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/btnpunto"
                            android:layout_weight="1"
                            android:background="@color/lightskyblue"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:layout_marginTop="10dip"
                            android:layout_marginBottom="10dip"/>
                    <Button
                            android:text="@string/btnigual"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/btnigual"
                            android:layout_weight="1"
                            android:background="@color/lightskyblue"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="10dip"
                            android:layout_marginTop="10dip"
                            android:layout_marginBottom="10dip"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4">
                <Button
                        android:text="@string/btnmas"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/btnmas"
                        android:layout_weight="1"
                        android:background="@color/lightskyblue"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="10dip"
                        android:layout_marginBottom="10dip"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>